updates cart/wishlist/products